app/Components/Canvas/TextNode/styles.module.scss
@import "@/app/Constants/colors.module";

.textNode {
  width: 100%;
  height: 100%;
  background-color: $sidebarBackground;
  border: 1px solid #9e968e;
  text-align: center;
}

.title {
  font-family: "Rainbow100", sans-serif;
  color: #9e968e;
  font-size: small;
  padding: 0 10px;
  -ms-overflow-style: none;
  scrollbar-width: none;
  resize: none;
  background: "transparent";
  text-align: "center";
}

.title:focus {
  outline: none;
  border: none;
}

.seperator {
  width: 80%;
  height: 2px;
  background-color: #343335;
  border: none;
  margin: 0;
  align-self: center;
}

.text {
  font-family: "Rainbow100", sans-serif;
  color: #9e968e;
  box-sizing: border-box;
  margin: 0;
  padding-left: 10px;
  padding-right: 10px;
  -ms-overflow-style: none;
  scrollbar-width: none;
  resize: none;
  text-align: "center";
}

.text::-webkit-scrollbar {
  display: none;
}

.text:focus {
  outline: none;
  border: none;
}

